force-app/main/default/objects/Feeding_Information__c/Feeding_Information__c.object-meta.xml
<CustomObject>
    <label>Feeding Information</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Feeding  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feeding Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>