force-app/main/default/objects/Feeding_Information__c/fields/Amount_Per_Feeding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Per_Feeding__c</fullName>
    <label>Amount Per Feeding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>