force-app/main/default/objects/Feeding_Information__c/fields/Diet_Type__c.field-meta.xml
<CustomField>
    <fullName>Diet_Type__c</fullName>
    <label>Diet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Soy</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Low Calorie</fullName>
            </value>
            <value>
                <fullName>Low Sodium</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Vegetarian (dairy only)</fullName>
            </value>
            <value>
                <fullName>Vegetarian (dairy/eggs)</fullName>
            </value>
            <value>
                <fullName>Special (Specify)</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>