force-app/main/default/objects/Feeding_Information__c/fields/Eater_Type__c.field-meta.xml
<CustomField>
    <fullName>Eater_Type__c</fullName>
    <label>Eater Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Hearty</fullName>
            </value>
            <value>
                <fullName>Picky</fullName>
            </value>
            <value>
                <fullName>Poor Appetite</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>