force-app/main/default/objects/Feeding_Information__c/fields/Feeding_Info_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Feeding_Info_Unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feeding Info Unknown</label>
    <type>Checkbox</type>
</CustomField>