force-app/main/default/objects/Feeding_Information__c/fields/Feeding_Position__c.field-meta.xml
<CustomField>
    <fullName>Feeding_Position__c</fullName>
    <label>Feeding Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Chair</fullName>
                <default>true</default>
                <label>High Chair</label>
            </value>
            <value>
                <fullName>Lap</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>