force-app/main/default/objects/Feeding_Information__c/fields/Health_Feeding_Comments__c.field-meta.xml
<CustomField>
    <fullName>Health_Feeding_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>