force-app/main/default/objects/Feeding_Information__c/fields/Info_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Info_Provided_By__c</fullName>
    <label>Info Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>