force-app/main/default/objects/Feeding_Information__c/fields/Info_Provided_Name__c.field-meta.xml
<CustomField>
    <fullName>Info_Provided_Name__c</fullName>
    <label>Info-Provided Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>