force-app/main/default/objects/Feeding_Information__c/fields/Liquids__c.field-meta.xml
<CustomField>
    <fullName>Liquids__c</fullName>
    <label>Liquids</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other (Specify)</fullName>
                <default>true</default>
                <label>Other (Specify)</label>
            </value>
            <value>
                <fullName>Bottle Fed</fullName>
            </value>
            <value>
                <fullName>Breast Fed</fullName>
            </value>
            <value>
                <fullName>Drinks from Cup</fullName>
            </value>
            <value>
                <fullName>Feeds Self</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>