force-app/main/default/objects/Feeding_Information__c/fields/Other_Needs__c.field-meta.xml
<CustomField>
    <fullName>Other_Needs__c</fullName>
    <label>Other Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nutritional Supplement</fullName>
                <default>true</default>
                <label>Nutritional Supplement</label>
            </value>
            <value>
                <fullName>Gastrostomy Intestinal tube (G-tube)</fullName>
            </value>
            <value>
                <fullName>Nasogastric tube (NG-tube)</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
            <value>
                <fullName>Pacifier</fullName>
            </value>
            <value>
                <fullName>Special nipple</fullName>
            </value>
            <value>
                <fullName>Thumbsucker</fullName>
            </value>
            <value>
                <fullName>Sucks Fingers</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>