force-app/main/default/objects/Feeding_Information__c/fields/Solid_Food__c.field-meta.xml
<CustomField>
    <fullName>Solid_Food__c</fullName>
    <label>Solid Food</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground Food</fullName>
                <default>true</default>
                <label>Ground Food</label>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Organic Foods</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Strained</fullName>
            </value>
            <value>
                <fullName>Table food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>