force-app/main/default/objects/Feeding_Information__c/fields/Types_of_Formula__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Formula__c</fullName>
    <label>Types of Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>